--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+    <!-- Animated Background Canvas -->
+    <canvas id="background-canvas"></canvas>
+
     <!-- Navigation -->
     <nav id="navbar">
         <div class="nav-container">
