--- a/index.html
+++ b/index.html
@@ -566,7 +566,168 @@
                         <span class="tech-tag">Google Colab</span>
                     </div>
                     <div class="project-links">
-                        <a href="https://github.com/faizankhan789" target="_blank" class="project-link">
+                        <a href="https://github.com/faizankhan789/Pose-Estimation-for-Human-Body-Analysis" target="_blank" class="project-link">
+                            <i class="fab fa-github"></i> View Code
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Project 9 -->
+                <div class="project-card">
+                    <div class="project-icon">
+                        <i class="fas fa-car-side"></i>
+                    </div>
+                    <h3>Saudi Number Plate Detection</h3>
+                    <p class="project-description">
+                        Advanced real-time vehicle license plate detection and recognition system using
+                        multiple AI-powered technologies for Saudi Arabian license plates.
+                    </p>
+                    <div class="project-tech">
+                        <span class="tech-tag">Python</span>
+                        <span class="tech-tag">YOLO</span>
+                        <span class="tech-tag">OCR</span>
+                        <span class="tech-tag">Computer Vision</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="https://github.com/faizankhan789/Saudi-Number-plate-detection" target="_blank" class="project-link">
+                            <i class="fab fa-github"></i> View Code
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Project 10 -->
+                <div class="project-card">
+                    <div class="project-icon">
+                        <i class="fas fa-images"></i>
+                    </div>
+                    <h3>Image Similarity Analysis</h3>
+                    <p class="project-description">
+                        VGG16 deep learning model for image classification and similarity comparison.
+                        Analyzes and classifies animal images using transfer learning techniques.
+                    </p>
+                    <div class="project-tech">
+                        <span class="tech-tag">Python</span>
+                        <span class="tech-tag">VGG16</span>
+                        <span class="tech-tag">TensorFlow</span>
+                        <span class="tech-tag">Transfer Learning</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="https://github.com/faizankhan789/Image-similarity" target="_blank" class="project-link">
+                            <i class="fab fa-github"></i> View Code
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Project 11 -->
+                <div class="project-card">
+                    <div class="project-icon">
+                        <i class="fas fa-smile"></i>
+                    </div>
+                    <h3>Face Emotion Detection</h3>
+                    <p class="project-description">
+                        Real-time facial emotion recognition system using deep learning. Detects and
+                        classifies human emotions from facial expressions in images and video streams.
+                    </p>
+                    <div class="project-tech">
+                        <span class="tech-tag">Python</span>
+                        <span class="tech-tag">Deep Learning</span>
+                        <span class="tech-tag">OpenCV</span>
+                        <span class="tech-tag">CNN</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="https://github.com/faizankhan789/Face-Emotion-Detection" target="_blank" class="project-link">
+                            <i class="fab fa-github"></i> View Code
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Project 12 -->
+                <div class="project-card">
+                    <div class="project-icon">
+                        <i class="fas fa-robot"></i>
+                    </div>
+                    <h3>Library Assistant Chatbot</h3>
+                    <p class="project-description">
+                        AI-powered chatbot using Groq generative AI API for intelligent book recommendations
+                        and library assistance. Natural language processing for user queries.
+                    </p>
+                    <div class="project-tech">
+                        <span class="tech-tag">Python</span>
+                        <span class="tech-tag">Groq AI</span>
+                        <span class="tech-tag">NLP</span>
+                        <span class="tech-tag">Chatbot</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="https://github.com/faizankhan789/Library-Assistant-Chatbot" target="_blank" class="project-link">
+                            <i class="fab fa-github"></i> View Code
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Project 13 -->
+                <div class="project-card">
+                    <div class="project-icon">
+                        <i class="fas fa-microphone"></i>
+                    </div>
+                    <h3>AI Virtual Assistant</h3>
+                    <p class="project-description">
+                        Intelligent virtual assistant leveraging Google's Generative AI Model API.
+                        Voice-activated assistant with natural language understanding capabilities.
+                    </p>
+                    <div class="project-tech">
+                        <span class="tech-tag">Python</span>
+                        <span class="tech-tag">Google GenAI</span>
+                        <span class="tech-tag">NLP</span>
+                        <span class="tech-tag">Voice Recognition</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="https://github.com/faizankhan789/AI-Assistant" target="_blank" class="project-link">
+                            <i class="fab fa-github"></i> View Code
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Project 14 -->
+                <div class="project-card">
+                    <div class="project-icon">
+                        <i class="fas fa-user-secret"></i>
+                    </div>
+                    <h3>Invisible Cloak Using OpenCV</h3>
+                    <p class="project-description">
+                        Computer vision project creating an "invisible cloak" effect using OpenCV.
+                        Real-time color segmentation and background replacement for visual effects.
+                    </p>
+                    <div class="project-tech">
+                        <span class="tech-tag">Python</span>
+                        <span class="tech-tag">OpenCV</span>
+                        <span class="tech-tag">Color Segmentation</span>
+                        <span class="tech-tag">Real-time Processing</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="https://github.com/faizankhan789/Invisible-Cloak-Using-OpenCV" target="_blank" class="project-link">
+                            <i class="fab fa-github"></i> View Code
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Project 15 -->
+                <div class="project-card">
+                    <div class="project-icon">
+                        <i class="fas fa-video"></i>
+                    </div>
+                    <h3>Video Comparison Tool</h3>
+                    <p class="project-description">
+                        Frame-by-frame video comparison tool with advanced pixel analysis algorithm.
+                        Detects differences between videos for quality assurance and analysis.
+                    </p>
+                    <div class="project-tech">
+                        <span class="tech-tag">Python</span>
+                        <span class="tech-tag">OpenCV</span>
+                        <span class="tech-tag">Frame Analysis</span>
+                        <span class="tech-tag">Computer Vision</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="https://github.com/faizankhan789/Video-comparison-tool" target="_blank" class="project-link">
                             <i class="fab fa-github"></i> View Code
                         </a>
                     </div>
