--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
                 </div>
                 <div class="home-image">
                     <div class="image-wrapper">
-                        <div class="image-placeholder">
-                            <i class="fas fa-user"></i>
-                        </div>
+                        <img src="img.png" alt="Muhammad Faizan Khan" class="profile-image">
                     </div>
                 </div>
             </div>
@@ -112,7 +110,7 @@
                             <p>CGPA (94%)</p>
                         </div>
                         <div class="stat-item">
-                            <h3>4+</h3>
+                            <h3>3+</h3>
                             <p>Years Experience</p>
                         </div>
                         <div class="stat-item">
