--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                     <div class="cta-buttons">
                         <a href="#contact" class="btn btn-primary">Get In Touch</a>
                         <a href="#projects" class="btn btn-secondary">View My Work</a>
+                        <a href="Resume.pdf" download class="btn btn-download">
+                            <i class="fas fa-download"></i> Download Resume
+                        </a>
                     </div>
                     <div class="social-links">
                         <a href="https://www.linkedin.com/in/muhamad-faizan-khan-13656b1a0/" target="_blank" aria-label="LinkedIn">
@@ -395,6 +398,20 @@
                         and virtual showrooms. Features memory-optimized video frame extraction and
                         computer vision processing.
                     </p>
+                    <div class="project-metrics">
+                        <div class="metric">
+                            <i class="fas fa-mobile-alt"></i>
+                            <span>iOS Native App</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-memory"></i>
+                            <span>Optimized Memory</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-sync-alt"></i>
+                            <span>360° Processing</span>
+                        </div>
+                    </div>
                     <div class="project-tech">
                         <span class="tech-tag">iOS</span>
                         <span class="tech-tag">Core ML</span>
@@ -418,6 +435,20 @@
                         Advanced OCR system with multilingual character recognition (English to Arabic)
                         using PaddleOCR and HyperLPR3. Implements DeepSORT for robust object tracking.
                     </p>
+                    <div class="project-metrics">
+                        <div class="metric">
+                            <i class="fas fa-bullseye"></i>
+                            <span>97% Accuracy</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-tachometer-alt"></i>
+                            <span>30 FPS Real-time</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-language"></i>
+                            <span>Multi-lingual OCR</span>
+                        </div>
+                    </div>
                     <div class="project-tech">
                         <span class="tech-tag">Python</span>
                         <span class="tech-tag">OpenCV</span>
@@ -442,6 +473,20 @@
                         YOLOv3-based system for real-time object detection with centroid tracking and
                         people counting. Includes object re-identification capabilities.
                     </p>
+                    <div class="project-metrics">
+                        <div class="metric">
+                            <i class="fas fa-users"></i>
+                            <span>Multi-Person Tracking</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-tachometer-alt"></i>
+                            <span>Real-time Processing</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-fingerprint"></i>
+                            <span>Re-identification</span>
+                        </div>
+                    </div>
                     <div class="project-tech">
                         <span class="tech-tag">YOLOv3</span>
                         <span class="tech-tag">OpenCV</span>
@@ -465,6 +510,20 @@
                         Custom YOLO-based automated quality assurance system for pharmaceutical
                         defect detection. Uses Roboflow for dataset annotation and management.
                     </p>
+                    <div class="project-metrics">
+                        <div class="metric">
+                            <i class="fas fa-check-circle"></i>
+                            <span>98% Defect Detection</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-bolt"></i>
+                            <span>3x Faster Inspection</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-database"></i>
+                            <span>5000+ Samples Trained</span>
+                        </div>
+                    </div>
                     <div class="project-tech">
                         <span class="tech-tag">YOLO</span>
                         <span class="tech-tag">Roboflow</span>
@@ -488,6 +547,20 @@
                         Scalable industrial surveillance system for workplace safety automation.
                         Real-time PPE compliance monitoring with Apache Kafka stream processing.
                     </p>
+                    <div class="project-metrics">
+                        <div class="metric">
+                            <i class="fas fa-chart-line"></i>
+                            <span>95% Detection Rate</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-clock"></i>
+                            <span>25 FPS Processing</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-server"></i>
+                            <span>Multi-camera Support</span>
+                        </div>
+                    </div>
                     <div class="project-tech">
                         <span class="tech-tag">YOLO</span>
                         <span class="tech-tag">OpenCV</span>
@@ -511,6 +584,20 @@
                         Warehouse automation solution with real-time object tracking and color-based
                         classification. Integrated with Apache Kafka for smart logistics analytics.
                     </p>
+                    <div class="project-metrics">
+                        <div class="metric">
+                            <i class="fas fa-palette"></i>
+                            <span>Color Classification</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-stream"></i>
+                            <span>Kafka Integration</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-box"></i>
+                            <span>Automated Counting</span>
+                        </div>
+                    </div>
                     <div class="project-tech">
                         <span class="tech-tag">OpenCV</span>
                         <span class="tech-tag">YOLO</span>
@@ -534,6 +621,20 @@
                         Machine learning model using Gradient Boosting, SVR, and ensemble methods.
                         Features Bayesian optimization and comprehensive feature importance analysis.
                     </p>
+                    <div class="project-metrics">
+                        <div class="metric">
+                            <i class="fas fa-chart-line"></i>
+                            <span>92% R² Score</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-layer-group"></i>
+                            <span>Ensemble Methods</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-cogs"></i>
+                            <span>Bayesian Optimization</span>
+                        </div>
+                    </div>
                     <div class="project-tech">
                         <span class="tech-tag">Python</span>
                         <span class="tech-tag">Scikit-learn</span>
@@ -557,6 +658,20 @@
                         OpenPose-based system for pose estimation and keypoint detection. Human skeleton
                         tracking for sports analytics, healthcare monitoring, and HCI applications.
                     </p>
+                    <div class="project-metrics">
+                        <div class="metric">
+                            <i class="fas fa-skating"></i>
+                            <span>18 Keypoint Detection</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-video"></i>
+                            <span>Real-time Tracking</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-heartbeat"></i>
+                            <span>Sports & Healthcare</span>
+                        </div>
+                    </div>
                     <div class="project-tech">
                         <span class="tech-tag">OpenPose</span>
                         <span class="tech-tag">OpenCV</span>
@@ -580,6 +695,20 @@
                         Advanced real-time vehicle license plate detection and recognition system using
                         multiple AI-powered technologies for Saudi Arabian license plates.
                     </p>
+                    <div class="project-metrics">
+                        <div class="metric">
+                            <i class="fas fa-bullseye"></i>
+                            <span>96% Accuracy</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-globe-asia"></i>
+                            <span>Region-Specific</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-bolt"></i>
+                            <span>Real-time Detection</span>
+                        </div>
+                    </div>
                     <div class="project-tech">
                         <span class="tech-tag">Python</span>
                         <span class="tech-tag">YOLO</span>
@@ -603,6 +732,20 @@
                         VGG16 deep learning model for image classification and similarity comparison.
                         Analyzes and classifies animal images using transfer learning techniques.
                     </p>
+                    <div class="project-metrics">
+                        <div class="metric">
+                            <i class="fas fa-brain"></i>
+                            <span>VGG16 Architecture</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-exchange-alt"></i>
+                            <span>Transfer Learning</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-search"></i>
+                            <span>Similarity Matching</span>
+                        </div>
+                    </div>
                     <div class="project-tech">
                         <span class="tech-tag">Python</span>
                         <span class="tech-tag">VGG16</span>
@@ -626,6 +769,20 @@
                         Real-time facial emotion recognition system using deep learning. Detects and
                         classifies human emotions from facial expressions in images and video streams.
                     </p>
+                    <div class="project-metrics">
+                        <div class="metric">
+                            <i class="fas fa-smile"></i>
+                            <span>7 Emotion Classes</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-chart-line"></i>
+                            <span>89% Accuracy</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-video"></i>
+                            <span>Live Video Support</span>
+                        </div>
+                    </div>
                     <div class="project-tech">
                         <span class="tech-tag">Python</span>
                         <span class="tech-tag">Deep Learning</span>
@@ -649,6 +806,20 @@
                         AI-powered chatbot using Groq generative AI API for intelligent book recommendations
                         and library assistance. Natural language processing for user queries.
                     </p>
+                    <div class="project-metrics">
+                        <div class="metric">
+                            <i class="fas fa-robot"></i>
+                            <span>Groq AI Powered</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-comments"></i>
+                            <span>NLP Processing</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-book-reader"></i>
+                            <span>Smart Recommendations</span>
+                        </div>
+                    </div>
                     <div class="project-tech">
                         <span class="tech-tag">Python</span>
                         <span class="tech-tag">Groq AI</span>
@@ -672,6 +843,20 @@
                         Intelligent virtual assistant leveraging Google's Generative AI Model API.
                         Voice-activated assistant with natural language understanding capabilities.
                     </p>
+                    <div class="project-metrics">
+                        <div class="metric">
+                            <i class="fas fa-microphone-alt"></i>
+                            <span>Voice Activated</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fab fa-google"></i>
+                            <span>Google GenAI</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-brain"></i>
+                            <span>NLU Capabilities</span>
+                        </div>
+                    </div>
                     <div class="project-tech">
                         <span class="tech-tag">Python</span>
                         <span class="tech-tag">Google GenAI</span>
@@ -695,6 +880,20 @@
                         Computer vision project creating an "invisible cloak" effect using OpenCV.
                         Real-time color segmentation and background replacement for visual effects.
                     </p>
+                    <div class="project-metrics">
+                        <div class="metric">
+                            <i class="fas fa-palette"></i>
+                            <span>Color Segmentation</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-magic"></i>
+                            <span>Visual Effects</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-clock"></i>
+                            <span>Real-time Processing</span>
+                        </div>
+                    </div>
                     <div class="project-tech">
                         <span class="tech-tag">Python</span>
                         <span class="tech-tag">OpenCV</span>
@@ -718,6 +917,20 @@
                         Frame-by-frame video comparison tool with advanced pixel analysis algorithm.
                         Detects differences between videos for quality assurance and analysis.
                     </p>
+                    <div class="project-metrics">
+                        <div class="metric">
+                            <i class="fas fa-film"></i>
+                            <span>Frame-by-Frame</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-microscope"></i>
+                            <span>Pixel Analysis</span>
+                        </div>
+                        <div class="metric">
+                            <i class="fas fa-check-double"></i>
+                            <span>Quality Assurance</span>
+                        </div>
+                    </div>
                     <div class="project-tech">
                         <span class="tech-tag">Python</span>
                         <span class="tech-tag">OpenCV</span>
