--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <meta name="keywords" content="Machine Learning Engineer, AI Specialist, Computer Vision, Deep Learning, TensorFlow, PyTorch, YOLO, Neural Networks">
     <meta name="author" content="Muhammad Faizan Khan">
     <title>Muhammad Faizan Khan | ML Engineer & AI Specialist</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/favicons/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -73,7 +77,7 @@
                 </div>
                 <div class="home-image">
                     <div class="image-wrapper">
-                        <img src="img.png" alt="Muhammad Faizan Khan" class="profile-image">
+                        <img src="assets/images/img.png" alt="Muhammad Faizan Khan" class="profile-image">
                     </div>
                 </div>
             </div>
@@ -1116,6 +1120,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
